<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbacklow"
>
    <LinearLayout
        android:id="@+id/appbarlyt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="About Us"
            android:fontFamily="@font/semibold"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>

    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/appbarlyt"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus1"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus2"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus3"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus4"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus5"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus6"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus7"
            android:fontFamily="@font/bitter"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10sp"
            android:paddingLeft="0dp"
            android:gravity="start"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>