<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"

        />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:orientation="vertical">

        <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
            android:id="@+id/top_navigation_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:theme="@style/BottomNavigationView"
            app:bnc_mode="inside"
            app:hideOnScroll="true"

            >
            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_icon="@drawable/home"
                app:bt_iconHeight="18sp"
                app:bt_iconWidth="18sp"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/grey_800"
                app:bt_title="@string/menu_home" />
            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="18sp"
                app:bt_iconWidth="18sp"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/grey_800"
                app:bt_icon="@drawable/help"
                app:bt_title="@string/menu_help" />


            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="18sp"
                app:bt_iconWidth="18sp"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/grey_800"
                app:bt_icon="@drawable/history"
                app:bt_title="@string/menu_history" />


            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/l_item_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:bt_iconHeight="18sp"
                app:bt_iconWidth="18sp"
                app:bt_colorActive="@color/colorAccent"
                app:bt_colorInactive="@color/grey_800"
                app:bt_icon="@drawable/account"
                app:bt_title="@string/menu_profile" />
        </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

        <!--            <com.google.android.material.bottomnavigation.BottomNavigationView-->
        <!--                android:id="@+id/bottom_navigation"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="bottom"-->
        <!--                app:elevation="13dp"-->
        <!--                app:itemBackground="@color/black"-->
        <!--                app:theme="@style/NavigationDrawerStyle"-->
        <!--                app:itemIconTint="@color/bottom_state_list"-->
        <!--                app:itemTextColor="@color/bottom_state_list"-->
        <!--                app:menu="@menu/bottom_navigation" />-->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>